@@ -68,6 +68,7 @@ AppData::AppData()
 	settings.application.cyclecards = FALSE;
 	settings.application.rememberLastService = TRUE;
 	settings.application.resumeLastTime = TRUE;
+	settings.application.resumesize = 50;
 	settings.application.lastServiceCmd = new wchar_t[MAX_PATH];
 	wcscpy(settings.application.lastServiceCmd, L"");
 	settings.application.currentServiceCmd = new wchar_t[MAX_PATH];
@@ -849,6 +850,11 @@ HRESULT AppData::LoadSettings()
 					settings.application.resumeLastTime = (_wcsicmp(pSubElement->value, L"true") == 0);
 					continue;
 				}
+				if (_wcsicmp(pSubElement->name, L"ResumeSize") == 0)
+				{
+					settings.application.resumesize = _wtoi(pSubElement->value);
+					continue;
+				}
 				if (_wcsicmp(pSubElement->name, L"LastServiceCmd") == 0)
 				{
 					if (pSubElement->value)
@@ -1141,7 +1147,7 @@ HRESULT AppData::LoadSettings()
 
 					continue;
 				}
-				if (_wcsicmp(pSubElement->name, L"resume") == 0)
+				if (_wcsicmp(pSubElement->name, L"Resume") == 0)
 				{
 					settings.timeshift.resume = (_wcsicmp(pSubElement->value, L"true") == 0);
 					continue;
@@ -1360,6 +1366,8 @@ HRESULT AppData::SaveSettings()
 		pApplication->Elements.Add(new XMLElement(L"CycleCards", (settings.application.cyclecards ? L"True" : L"False")));
 		pApplication->Elements.Add(new XMLElement(L"RememberLastService", (settings.application.rememberLastService ? L"True" : L"False")));
 		pApplication->Elements.Add(new XMLElement(L"ResumeLastTime", (settings.application.resumeLastTime ? L"True" : L"False")));
+		strCopy(pValue, settings.application.resumesize);
+		pApplication->Elements.Add(new XMLElement(L"ResumeSize", pValue));
 		pApplication->Elements.Add(new XMLElement(L"LastServiceCmd", settings.application.lastServiceCmd));
 		pApplication->Elements.Add(new XMLElement(L"LongNetworkName", (settings.application.longNetworkName ? L"True" : L"False")));
 		pApplication->Elements.Add(new XMLElement(L"DecoderTest", (settings.application.decoderTest ? L"True" : L"False")));
@@ -1522,7 +1530,7 @@ HRESULT AppData::SaveSettings()
 	file.Elements.Add(pTimeshift);
 	{
 		pTimeshift->Elements.Add(new XMLElement(L"Folder", settings.timeshift.folder));
-		pWindow->Elements.Add(new XMLElement(L"Resume", (settings.timeshift.resume ? L"True" : L"False")));
+		pTimeshift->Elements.Add(new XMLElement(L"Resume", (settings.timeshift.resume ? L"True" : L"False")));
 		strCopy(pValue, settings.timeshift.dlimit);
 		pTimeshift->Elements.Add(new XMLElement(L"LoadDelayLimit", pValue));
 		strCopy(pValue, settings.timeshift.flimit);
