@@ -29,6 +29,8 @@ nate:
 
 bear:
 Changes:
+- Added a size limit to the resume list, can be set in the settings.xml file.
+- Fixed a few things with the resume settings.
 - Added file resume list to application, also added settings in the global & timeshift menus.
 - Added the Cyberlink 7 h264 decoder to the decoder.xml file.
 - Fixed a few bugs that were causing problems with rendering decoders.
